fixed contact form width on mobile

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ nav button {
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: rgba(0, 0, 0, 0.7);
     align-content: center;
     align-items: center;
@@ -84,6 +84,13 @@ nav button {
     width: 30vw;
     overflow: hidden;
     animation: contact 0.88s ease;
+}
+
+/* Media Queries */
+@media screen and (max-width: 678px) {
+    .popup-content {
+        width: 60vw;
+    }
 }
 
 .popup-heading {
